# godot_tron

./: Cargo.toml  build.sh  godot_tron.code-workspace  project.godot
.import/: blank.png-bd728c547d283053f24ff2c4e659adaf.md5  corona_bk.png-5f773d44381771862220f90fc58da584.md5  corona_bk.png-5f773d44381771862220f90fc58da584.stex  corona_dn.png-343056addd578b7dec62d13817889036.md5  corona_dn.png-7a2f44a850676738e6d692802bbdd150.stex  corona_ft.png-087c446b1029cf30504629ecb7c964ce.md5  corona_ft.png-087c446b1029cf30504629ecb7c964ce.stex  corona_lf.png-941ef61e5eb89c26f1f5154104dd74dc.md5  corona_lf.png-941ef61e5eb89c26f1f5154104dd74dc.stex  corona_rt.png-f20fb2d075cb752a12b0c02e97106c5b.md5  corona_rt.png-f20fb2d075cb752a12b0c02e97106c5b.stex  corona_up.png-af38b1f6644dd498730854dd47f461e4.md5  corona_up.png-af38b1f6644dd498730854dd47f461e4.stex  icon_128.png-bc733a5089b996fd1b0f1a32ba0fad11.md5  icon_128.png-bc733a5089b996fd1b0f1a32ba0fad11.stex  icon_64.png-1dd1e5ffc394f1e3bd01f5fe41b3ee65.stex  icon_64.png-5795a70f29439e00fd492775d9bfc058.md5  milkyway.jpg-6f54b21b6d7e289ea6c3c2ca74fac611.md5  player.glb-36e3b2d0fe6d66cf03b2e49d95806322.md5  player.obj-2983e0cef4df43b1ed9cc45f1f3bde17.md5  player.obj-2983e0cef4df43b1ed9cc45f1f3bde17.mesh  redeclipse_bk.png-82142e9339191a73e9f9c01aaec7b66e.stex  redeclipse_bk.png-d3b837446967519df171a956e21e735b.md5  (+13 more)
gd_scripts/: FPSCount.gd  (+6 more)
godot_tron_rs/: Cargo.toml  build.sh
godot_tron_rs/src/: lib.rs  util.rs
godot_tron_rs/src/classes/: client.rs  mod.rs  player.rs
godot_tron_rs/src/enums/: direction.rs  move_event.rs
(+37 files in other folders)
