[package]
name = "godot_tron_rs"
version = "0.1.0"
authors = ["shnaky <mail@shnaky.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdnative = { git = "https://github.com/GodotNativeTools/godot-rust" }

[lib]
crate-type = ["cdylib"]
